# readit

./: .gitignore  README.md  TAURI2_READIT_FEASIBILITY_PLAN.md  index.html  package-lock.json  package.json
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs  tts.rs
